--- a/src/components/Comic/ComicDetail/ComicDetail.css
+++ b/src/components/Comic/ComicDetail/ComicDetail.css
@@ -12,6 +12,11 @@
   grid-template-columns: 65% auto;
 }
 
+.detail-title {
+  border-bottom: 1px solid #ccc;
+  font-weight: 600;
+}
+
 .title {
   grid-area: title;
 }
