--- a/src/components/Comic/ComicItem/ComicItem.css
+++ b/src/components/Comic/ComicItem/ComicItem.css
@@ -15,6 +15,6 @@
 .comic-item-detail {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
